--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-cli": "^0.1.13",
     "grunt-coffeelint": "0.0.13",
     "grunt-contrib-coffee": "^0.13.0",
+    "grunt-contrib-uglify": "^0.10.1",
     "grunt-mocha-test": "^0.12.7",
     "mocha": "^2.3.3",
     "promise": "^7.0.4"
