--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "chuck-norris-api",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Node JS interface library into the Internet Chuck Norris Database API ",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/grunt-cli/bin/grunt mochaTest"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
     "Funny",
     "YuiDoc"
   ],
-  "author": "Philip Simmons and Goeffrey Pitman",
+  "author": "Phil Simmons and Geoff Pitman",
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/lobobabysaurus/chuck-norris-api/issues"
