--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chuck-norris-api",
-  "version": "1.0.4",
-  "description": "Node JS interface library into the Internet Chuck Norris Database API ",
+  "version": "1.0.5",
+  "description": "Node JS interface library into the Internet Chuck Norris Database API",
   "main": "dist/index.js",
   "scripts": {
     "test": "node_modules/grunt-cli/bin/grunt mochaTest"
@@ -18,7 +18,7 @@
     "Funny",
     "YuiDoc"
   ],
-  "author": "Phil Simmons and Geoff Pitman",
+  "author": "Phil Simmons",
   "license": "BSD-2-Clause",
   "bugs": {
     "url": "https://github.com/lobobabysaurus/chuck-norris-api/issues"
