--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node JS interface library into the Internet Chuck Norris Database API",
   "main": "dist/index.js",
   "scripts": {
+    "build": "node_modules/grunt-cli/bin/grunt coffee",
     "test": "node_modules/grunt-cli/bin/grunt mochaTest"
   },
   "repository": {
