--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "url": "https://github.com/lobobabysaurus/chuck-norris-api/issues"
   },
   "dependencies": {
-    "promise": "^7.0.4",
+    "promise": "^7.0.4"
   },
   "devDependencies": {
     "chai": "^3.4.1",
